# docsync

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SESSION.md  TODO.md  config.yaml  docsync.yaml  mypy.ini  pyproject.toml  run_sync.py  setup.py  setup_docsync.py  verify_setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  test.yml
core/: __init__.py
docs/: .notion_sync
docsync/: __init__.py
examples/: doc_processor_example.py  generate_esg_report.py  rmarkdown_example.py
examples/notion/: notion_cli.py  notion_sync_example.py  rich_content_example.py  setup_notion.py  test_notion_integration.py
src/: ai_processor.py  aiogit.py  monitor.py
src/docsync/: __init__.py  ai_processor.py  aiogit.py  cli.py  config.py  core.py  exceptions.py  sync_manager.py  utils.py
src/docsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/docsync/core/: __init__.py  base.py  llm.py  sync.py  sync_agent.py  sync_state.py
src/docsync/integrations/: claude_provider.py  gemini_provider.py  openai_provider.py  paper_converter.py
src/docsync/integrations/notion/: __init__.py  bridge.py  client.py  config.py  notion_content_types.py  sync_monitor.py  types.py
src/docsync/integrations/notion/tests/: conftest.py  test_notion.py
src/docsync/mcp/: server.py
src/docsync/plugins/: base.py
src/docsync/plugins/formats/: rmarkdown.py
src/docsync/templates/: filters.py  orchestrator.py  renderer.py
src/docsync/utils/: __init__.py  common.py  config.py  filter_registry.py  filters.py  renderer.py
tests/: __init__.py  conftest.py  test_ai_integration.py  test_ai_processor.py  test_core.py  test_docsync.py  test_esg_report.py  test_filters.py  test_integration.py  test_mcp_server.py  test_monitor.py  test_orchestrator.py  test_renderer.py  test_sync.py
tests/integrations/notion/: conftest.py  test_notion_content_types.py  test_notion_integration.py  test_notion_types.py
tests/performance/: test_benchmarks.py
tests/unit/: test_core.py
